Closed Bug 11477 Opened 25 years ago Closed 25 years ago

nsLocale does not get the User setting Locale

Categories

(Core :: Internationalization, defect, P2)

All
Windows NT
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: teruko, Assigned: tague)

References

()

Details

nsLocale gets the Native locale fine, but does not get user setting locale from the control panel.

Steps of reproduce
1. If you use Windows NT JA, go to the Control panel
2. Select Regional to change to French and click on Apply button
3. Launch Apprunner
4. Go to above page and Click on both button

Get Application locale should be changed to French Locale, but it still "ja_JP".

I tested 8-09-08 Win32, 8-03 Linux builds.
Priority: P3 → P2
Target Milestone: M9
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
I fixed this on windows (naoki found a typo in the code), but I couldn't
reproduce it on Linux.  Do you have the appropriate locale that you are trying
to test installed on the linux box.

I tested this with en_US and fr_FR and got the right values.  Also an important
point to note is that system & application locale will always be the same on
Macintosh and linux.
Status: RESOLVED → VERIFIED
I tested this in 8-10-09 Win32 and Linux builds.
You need to log in before you can comment on or make changes to this bug.