Fixed bug #11477 - nsLocale not correctly getting application locale.